<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.quentinlehmann.dmxv2.Welcome">

    <ImageButton
        android:id="@+id/imageButtonFile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:background="@android:color/transparent"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_folder_open_black_36dp"
        android:onClick="GererSB"/>

    <Button
        android:id="@+id/btnGererSb"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:background="@android:color/transparent"
        android:text="@string/g_rer_les_story_boards"
        android:textAlignment="textStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageButtonFile"
        app:layout_constraintTop_toTopOf="parent"
        android:onClick="GererSB"/>

    <ImageButton
        android:id="@+id/imageButtonChangeColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:background="@android:color/transparent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButtonFile"
        app:srcCompat="@drawable/ic_border_color_black_36dp"
        android:onClick="Page_Changer_Couleur"/>

    <Button
        android:id="@+id/buttonChangerCouleur"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:background="@android:color/transparent"
        android:text="@string/changer_couleur"
        android:textAlignment="textStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageButtonChangeColor"
        app:layout_constraintTop_toBottomOf="@+id/btnGererSb"
        android:onClick="Page_Changer_Couleur"/>

    <ImageButton
        android:id="@+id/imageButton4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:background="@android:color/transparent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButtonChangeColor"
        app:srcCompat="@drawable/ic_settings_black_36dp"
        android:onClick="ParametreGlobaux"/>

    <Button
        android:id="@+id/buttonSettings"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:background="@android:color/transparent"
        android:text="@string/param_tre"
        android:textAlignment="textStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageButton4"
        app:layout_constraintTop_toBottomOf="@+id/buttonChangerCouleur"
        android:onClick="ParametreGlobaux"/>
</android.support.constraint.ConstraintLayout>
